Changed chat opacity

--- a/watch.html
+++ b/watch.html
@@ -14,7 +14,7 @@
 			Your browser does not support HTML5 video.
 		</video>
 		<div id="chat"></div>
-		<div id="chatinput">
+		<div id="chatinput" style="opacity:0.05">
 			<input type="text" id="username" placeholder="Username">
 			<input type="text" id="usertext" placeholder="Type something...">
 		</div>
